# gemm

./: CMakeLists.txt  README.md
include/: gemm_template.cuh  utils.cuh  utils_benchmark.cuh  utils_check_device.cuh
src/: 00_gemm_naive.cu  CMakeLists.txt  bridge_gemm_fp32.cu  checktheversion.cpp
